adding readme file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <div id="start-page" class="page">
-    <h1>Asteroids Game 🚀</h1>
+    <h1>Asteroids Game 🚀
+    </h1>
+
     <p>Instructions:</p>
     <ul>
       <li>Use W or UP arrow to move forward</li>
